--- a/style.css
+++ b/style.css
@@ -1,6 +1,3 @@
-
-
-
 .font {
   font-family: sans-serif;
   font-size: medium;
@@ -73,44 +70,52 @@
   }
 }
 
-/* @media (max-width: 992px) {
-  .shope-now {
-    margin-top: -16px;
-  }
-} */
 
 
-.last-img
+@media only screen and (max-width:576px)
 {
-  filter: brightness(70%);
+  .shope-now
+  {
+    margin-top: 25px;
+  }
+  .about
+  {
+    padding-left: 3px;
+  }
+}
+
+@media only screen and(max-width:1200px)
+{
+.shope-now
+{
+  margin-top: 30px;
+}
+
 }
 
 
-.footer-1 dd
-{
+
+
+
+
+
+
+.last-img {
+  filter: brightness(70%);
+}
+
+.footer-1 dd {
   line-height: 31px;
   padding-left: 46px;
 }
 
-
-
-
 /* ........ */
 
-@media (min-width:576px) {
-
-  .footer-dl
-  {
+@media (min-width: 576px) {
+  .footer-dl {
     display: flex;
     color: aquamarine;
   }
-  
 }
-
-
-
-
-
-
 
 /* ..........footer..... */
